<resources>
    <string name="app_name">Qatar22</string>
    <string name="txt_btn_Register">Registrar puntos</string>
    <string name="txt_btn_ConsultResul">Consultar Resultado</string>
    <string name="tvEnter">Introducir resultado</string>
    <string name="hint_edit_DataTime">Introduce la fecha</string>
    <string name="hint_edit_Phase">Introduce la fase: Fase de grupo, Octavos, Cuartos, Semifinales, Tercer lugar, Final</string>
    <string name="hint_edit_Team1">Selecciona el equipo 1</string>
    <string name="hint_edit_Team2">Selecciona el equipo 2</string>
    <string name="txt_btn_SelectTeam">Seleccionar</string>
    <string name="hint_GolTeam1">Goles del equipo 1</string>
    <string name="txt_btn_ClearData">Limpiar Datos</string>
    <string name="txt_btn_SaveData">Guardar Resultado</string>
    <string name="hint_GolTeam2">Goles del equipo 2</string>
    <string name="txt_line">-</string>
    <string name="txt_tv_SelectTeam">Selección de equipo</string>
    <string name="txt_btn_Germany">Alemania</string>
    <string name="txt_btn_ArabiaSaudi">Arabia Saudi</string>
    <string name="txt_btn_Argentina">Argentina</string>
    <string name="txt_btn_Australia">Australia</string>
    <string name="txt_btn_Belgium">Bélgica</string>
    <string name="txt_btn_Brazil">Brasil</string>
    <string name="txt_btn_Cameroon">Camerún</string>
    <string name="txt_btn_Canada">Canadá</string>
    <string name="txt_btn_SouthKorea">Corea del Sur</string>
    <string name="txt_btn_CostRica">Costa Rica</string>
    <string name="txt_btn_Denmark">Dinamarca</string>
    <string name="txt_btn_Ecuador">Ecuador</string>
    <string name="txt_btn_Spain">España</string>
    <string name="txt_btn_UnitedStates">Estados Unidos</string>
    <string name="txt_btn_Croatia">Croacia</string>
    <string name="txt_btn_France">Francia</string>
    <string name="txt_btn_Gales">Gales</string>
    <string name="txt_btn_Ghana">Ghana</string>
    <string name="txt_btn_Nederland">Holanda</string>
    <string name="txt_btn_England">Inglaterra</string>
    <string name="txt_btn_Iran">Iran</string>
    <string name="txt_btn_Japan">Japón</string>
    <string name="txt_btn_Maroc">Marruecos</string>
    <string name="txt_btn_Mexico">México</string>
    <string name="txt_btn_Poland">Polonia</string>
    <string name="txt_btn_Portugal">Portugal</string>
    <string name="txt_btn_Qatar">Qatar</string>
    <string name="txt_btn_Senegale">Senegal</string>
    <string name="txt_btn_Serbia">Serbia</string>
    <string name="txt_btn_Switzerland">Suiza</string>
    <string name="empty" />
    <string name="txt_btn_Tunisia">Túnez</string>
    <string name="txt_btn_Uruguay">Uruguay</string>
    <string name="txt_btn_Accept">Aceptar</string>
    <string name="txt_btn_Cancel">Cancelar</string>
    <string name="hint_edit_CountrySelected">Introduce el pais Seleccionado</string>
    <string name="txt_tv_ConsultResult">Consultar resultado por país</string>
    <string name="hint_edit_enter">Introduce el país</string>
    <string name="select_country">Debes selecionar un equipo</string>
    <string name="requestData">Todo los datos son obligatorios</string>
    <string name="save_messege">!Resultado guardado!</string>
    <string name="tvConsultResult">Consultar resultados por pais</string>
    <string name="txt_btn_Consult">Seleccionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_tvG">-</string>
    <string name="txt">Selecciona el pais</string>
    <string name="backName">Seleccionar</string>
    <string name="txtChangeName">Limpiar Datos</string>
</resources>