<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/marginApp"
    tools:context=".ConsultResultActivity">

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvConsultResult"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_size_title"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/ll_SelectTeam1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_between_tv_and_et"
        >

        <EditText
            android:id="@+id/edit_SelectTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:enabled="false"
            android:hint="@string/hint_edit_enter"
            android:textSize="@dimen/edit_size_hint" />

        <Button
            android:id="@+id/btn_ConsultResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_btn_SelectTeam"
            android:backgroundTint="@color/colors_btn"
            />

    </LinearLayout>

</RelativeLayout>